--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.11"
 pyserial = "^3.5"
 event = {git = "https://github.com/CrinitusFeles/Event.git"}
+loguru = "^0.7.2"
 
 
 [build-system]
